add css, img folder with logo image, and update to index.html with top layout, logo, and header.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,31 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title>Project 1</title>
-		<link rel="stylesheet" 	
-			href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">	
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
-<body>
-	
-This is the index.html page of project1
+<body class="backgroundContainer">
+	<div class="container"><!--container holds all content-->
+		<div class="container topContainer"><!--Holds all contents in the top section-->
+			<div class="row">
+				<div class="span5"><img src="img/200px-EarthRecycle.png"></div> 
+					<!--Img from http://commons.wikimedia.org/wiki/File:Earth_recycle.svg-->	
+				<div class="span9">
+					<h1>YOUR ELECTRONICS SOLUTION</h1>
+				</div>	
+			</div>
+		</div>	<!--end of top container-->
+	</div> <!--end of container that holds all content-->
 
 </body>
 </html>
+
+<!-- 
+
+Reduce electronic waste.  Become a volunteer to pick up 
+waste from individuals and properly dispose of it for them.
+
+	Place a request to have your electronic waste picked up 
+	(img page http://commons.wikimedia.org/wiki/Category:WEEE)
+	
+-->
