middle section added to index.html

--- a/index.html
+++ b/index.html
@@ -25,12 +25,42 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 		<div class="container topContainer"><!--Holds all contents in the top section-->
 			<div class="row">
 				<div class="span5"><img src="img/200px-EarthRecycle.png"></div> 
-					<!--Img from http://commons.wikimedia.org/wiki/File:Earth_recycle.svg-->	
+					<!--Img from wikimedia commons-->	
 				<div class="span9">
 					<h1>YOUR ELECTRONICS SOLUTION</h1>
+					<p>Have you ever wondered what to do with that old computer that no longer meets your necessary specs?  
+						Or the printer that can't be fixed?  What about that laptop that you've just replaced?</p>
+					<p>	Look no further.  Our volunteers will pick up your electronic waste, recycle any parts 
+						that may still be useful, and dispose properly of the rest.</p>
 				</div>	
 			</div>
+			</div>
 		</div>	<!--end of top container-->
+		<div class="container spacer"></div>
+
+	<body class="backgroundContainer">
+		<div class="container"><!--container holds all content-->
+			<div class="container middleContainer"><!--Holds all contents in the top section-->
+				<div class="row">
+					<div class="span2"><img src="img/64px-NoTrash.png"></div> 
+						<!--Img from wikimedia commons-->	
+					<div class="span5">
+						<h2>Request Our Services</h2>
+						<p>Search for volunteers in your area.</p>
+					</div>
+						<div class="span6">
+						  <form>
+							<br />
+							<label>Your Zip Code</label>
+							<div class="input">
+								<input type="text" />
+							</div>
+					  	  </form> 
+						</div>
+				</div>
+			</div>
+		</div><!--end of middle container-->
+
 	</div> <!--end of container that holds all content-->
 
 </body>
