bottom section added to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 <body class="backgroundContainer">
-	<div class="container"><!--container holds all content-->
 		<div class="container topContainer"><!--Holds all contents in the top section-->
 			<div class="row">
 				<div class="span5"><img src="img/200px-EarthRecycle.png"></div> 
@@ -36,32 +35,59 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 			</div>
 			</div>
 		</div>	<!--end of top container-->
+		
 		<div class="container spacer"></div>
-
-	<body class="backgroundContainer">
-		<div class="container"><!--container holds all content-->
-			<div class="container middleContainer"><!--Holds all contents in the top section-->
-				<div class="row">
-					<div class="span2"><img src="img/64px-NoTrash.png"></div> 
-						<!--Img from wikimedia commons-->	
+		
+		<div class="container middleContainer"><!--Holds all contents in the middle section-->
+			<div class="row">
+				<div class="span2"><img src="img/64px-NoTrash.png"></div> 
+					<!--Img from wikimedia commons-->	
 					<div class="span5">
-						<h2>Request Our Services</h2>
-						<p>Search for volunteers in your area.</p>
+						<h2>Don't Throw It Away</h2>
+						<p>Request our services.  Search for volunteers in your area.</p>
 					</div>
-						<div class="span6">
-						  <form>
+					<div class="span6">
+				  		<form>
 							<br />
 							<label>Your Zip Code</label>
 							<div class="input">
-								<input type="text" />
+								<input type="text" />			
 							</div>
-					  	  </form> 
-						</div>
+			  	  		</form> 
+					</div>
+					<div class="span1 offset1">
+						<button class="btn primary">Search Now</button>
+					</div>
 				</div>
 			</div>
 		</div><!--end of middle container-->
+		
+		<div class="container spacer"></div>
+		
+		<div class="container bottomContainer"><!--Holds all contents in the bottom section-->
+			<div class="row">
+				<div class="span2"><img src="img/64px-JoinUs.png"></div> 
+					<!--Img from wikimedia commons-->	
+					<div class="span4 offset1">
+						<h2>Volunteer</h2>
+						<p>Sign up and help make a difference.</p>
+					</div>
+					<div class="span6">
+				  		<form>
+							<br />
+							<label>Email address</label>
+							<div class="input">
+								<input type="text" />			
+							</div>
+			  	  		</form> 
+					</div>
+					<div class="span1 offset1">
+						<button class="btn primary">Sign Up</button>
+					</div>
+				</div>
+			</div>
+		</div><!--end of bottom container-->		
 
-	</div> <!--end of container that holds all content-->
 
 </body>
 </html>
