pill links added to bottom of index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 				<div class="span5"><img src="img/200px-EarthRecycle.png"></div> 
 					<!--Img from wikimedia commons-->	
 				<div class="span9">
-					<h1>YOUR ELECTRONICS SOLUTION</h1>
+					<h1 class="greenHeader">YOUR ELECTRONICS SOLUTION</h1>
 					<p>Have you ever wondered what to do with that old computer that no longer meets your necessary specs?  
 						Or the printer that can't be fixed?  What about that laptop that you've just replaced?</p>
 					<p>	Look no further.  Our volunteers will pick up your electronic waste, recycle any parts 
@@ -88,6 +88,19 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 			</div>
 		</div><!--end of bottom container-->		
 
+		<div class="container spacer"></div>
+		
+		<div class="container bottomLinksContainer"><!--holds bottom links menu-->
+			<div class="row">
+				<div class="span10 offset6">
+					<ul class="pills">
+				  		<li><a href="#">About Us</a></li>
+				  		<li><a href="#">Donate</a></li>
+				  		<li><a href="#">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</div><!--end of bottom links menu-->
 
 </body>
 </html>
