--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 		<title>Project 1</title>
 		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">	
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!--<script src="script/bootstrap-modal.js" type="text/javascript"> -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	    <script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-modal.js"></script>
+		
+		<script>
+			$('#search-modal').modal({
+				keyboard: true
+				var text = $("We found a volunteer near you.").text();
+			})
+		</script>
+		
 	</head>
 <body class="backgroundContainer">
 		<div class="container topContainer"><!--Holds all contents in the top section-->
@@ -56,7 +67,24 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 			  	  		</form> 
 					</div>
 					<div class="span1 offset1">
-						<button class="btn primary">Search Now</button>
+						<button class="btn primary" data-controls-modal="searchModal" data-backdrop="true" data-keyboard="true">Search Now</button>
+						
+						<!-- ================= SEARCH MODAL ================== -->
+				          <div id="searchModal" class="modal hide fade">
+				            <div class="modal-header">
+				              <a href="#" class="close">&times;</a>
+				              <h3>Search Results</h3>
+				            </div>
+				            <div class="modal-body">
+
+				              <p>We found volunteers in your area.</p>
+				            </div>
+				            <div class="modal-footer">
+				              <a href="#" class="btn primary">Contact</a>
+				              <a href="index.html" class="btn secondary">Cancel</a>
+				            </div>
+				          </div>
+					  <!-- ================= END OF SEARCH MODAL ================== -->
 					</div>
 				</div>
 			</div>
@@ -82,7 +110,23 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 			  	  		</form> 
 					</div>
 					<div class="span1 offset1">
-						<button class="btn primary">Sign Up</button>
+						<button class="btn primary" data-controls-modal="joinModal" data-backdrop="true" data-keyboard="true">Sign Up</button>
+						
+						<!-- =================  JOIN MODAL ================== -->
+				          <div id="joinModal" class="modal hide fade">
+				            <div class="modal-header">
+				              <a href="#" class="close">&times;</a>
+				              <h3>Thank you</h3>
+				            </div>
+				            <div class="modal-body">
+
+				              <p>Thank you for signing up.  We will be in contact with you shortly.</p>
+				            </div>
+				            <div class="modal-footer">
+				              <a href="index.html" class="btn secondary">Close</a>
+				            </div>
+				          </div>
+					  <!-- ================= END OF JOIN MODAL ================== -->
 					</div>
 				</div>
 			</div>
@@ -101,7 +145,6 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 				</div>
 			</div>
 		</div><!--end of bottom links menu-->
-
 </body>
 </html>
 
