changed color scheme of index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 		
 	</head>
 <body class="backgroundContainer">
+	
+		<div class="container spacer"></div>
+		
 		<div class="container topContainer"><!--Holds all contents in the top section-->
 			<div class="row">
 				<div class="span5"><img src="img/200px-EarthRecycle.png"></div> 
@@ -54,7 +57,7 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 				<div class="span2"><img src="img/64px-NoTrash.png"></div> 
 					<!--Img from wikimedia commons-->	
 					<div class="span5">
-						<h2>Don't Throw It Away</h2>
+						<h2 class="greenHeader2">Don't Throw It Away</h2>
 						<p>Request our services.  Search for volunteers in your area.</p>
 					</div>
 					<div class="span6">
@@ -67,7 +70,7 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 			  	  		</form> 
 					</div>
 					<div class="span1 offset1">
-						<button class="btn primary" data-controls-modal="searchModal" data-backdrop="true" data-keyboard="true">Search Now</button>
+						<button class="btn" data-controls-modal="searchModal" data-backdrop="true" data-keyboard="true">Search Now</button>
 						
 						<!-- ================= SEARCH MODAL ================== -->
 				          <div id="searchModal" class="modal hide fade">
@@ -97,7 +100,7 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 				<div class="span2"><img src="img/64px-JoinUs.png"></div> 
 					<!--Img from wikimedia commons-->	
 					<div class="span4 offset1">
-						<h2>Volunteer</h2>
+						<h2 class="greenHeader2">Volunteer</h2>
 						<p>Sign up and help make a difference.</p>
 					</div>
 					<div class="span6">
@@ -110,7 +113,7 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 			  	  		</form> 
 					</div>
 					<div class="span1 offset1">
-						<button class="btn primary" data-controls-modal="joinModal" data-backdrop="true" data-keyboard="true">Sign Up</button>
+						<button class="btn" data-controls-modal="joinModal" data-backdrop="true" data-keyboard="true">Sign Up</button>
 						
 						<!-- =================  JOIN MODAL ================== -->
 				          <div id="joinModal" class="modal hide fade">
@@ -137,7 +140,7 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 		<div class="container bottomLinksContainer"><!--holds bottom links menu-->
 			<div class="row">
 				<div class="span10 offset6">
-					<ul class="pills">
+					<ul class="pills pillStyle">
 				  		<li><a href="#">About Us</a></li>
 				  		<li><a href="#">Donate</a></li>
 				  		<li><a href="#">Contact</a></li>
