corrected html5 validation errors in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+<!DOCTYPE html>
+
 <!-- 
 NAME: 	 	Danielle Collins
 CLASS: 		CSCI 344
@@ -8,9 +10,6 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 			web page for a fake product, service, or application.
 
 -->
-
-
-<!DOCTYPE html>
 	
 	<html>
 	
@@ -37,16 +36,15 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 		
 		<div class="container topContainer"><!--Holds all contents in the top section-->
 			<div class="row">
-				<div class="span5"><img src="img/200px-EarthRecycle.png"></div> 
+				<div class="span5"><img src="img/200px-EarthRecycle.png" alt="Logo"></div> 
 					<!--Img from wikimedia commons-->	
-				<div class="span9">
-					<h1 class="greenHeader">YOUR ELECTRONICS SOLUTION</h1>
-					<p>Have you ever wondered what to do with that old computer that no longer meets your necessary specs?  
+					<div class="span9">
+						<h1 class="greenHeader">YOUR ELECTRONICS SOLUTION</h1>
+						<p>Have you ever wondered what to do with that old computer that no longer meets your necessary specs?  
 						Or the printer that can't be fixed?  What about that laptop that you've just replaced?</p>
-					<p>	Look no further.  Our volunteers will pick up your electronic waste, recycle any parts 
+						<p>	Look no further.  Our volunteers will pick up your electronic waste, recycle any parts 
 						that may still be useful, and dispose properly of the rest.</p>
-				</div>	
-			</div>
+					</div>	
 			</div>
 		</div>	<!--end of top container-->
 		
@@ -54,7 +52,7 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 		
 		<div class="container middleContainer"><!--Holds all contents in the middle section-->
 			<div class="row">
-				<div class="span2"><img src="img/64px-NoTrash.png"></div> 
+				<div class="span2"><img src="img/64px-NoTrash.png" alt="Not Trash"></div> 
 					<!--Img from wikimedia commons-->	
 					<div class="span5">
 						<h2 class="greenHeader2">Don't Throw It Away</h2>
@@ -90,14 +88,13 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 					  <!-- ================= END OF SEARCH MODAL ================== -->
 					</div>
 				</div>
-			</div>
 		</div><!--end of middle container-->
 		
 		<div class="container spacer"></div>
 		
 		<div class="container bottomContainer"><!--Holds all contents in the bottom section-->
 			<div class="row">
-				<div class="span2"><img src="img/64px-JoinUs.png"></div> 
+				<div class="span2"><img src="img/64px-JoinUs.png" alt="Join"></div> 
 					<!--Img from wikimedia commons-->	
 					<div class="span4 offset1">
 						<h2 class="greenHeader2">Volunteer</h2>
@@ -132,7 +129,6 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 					  <!-- ================= END OF JOIN MODAL ================== -->
 					</div>
 				</div>
-			</div>
 		</div><!--end of bottom container-->		
 
 		<div class="container spacer"></div>
