Links added to index.html

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 		
 		<div class="container bottomContainer"><!--Holds all contents in the bottom section-->
 			<div class="row">
-				<div class="span2"><img src="img/64px-JoinUs.png" alt="Join"></div> 
-					<!--Img from wikimedia commons-->	
+				<div class="span2"><img src="img/JoinUs.png" alt="Join"></div> 
+					<!--Img from wikimedia commons, edited to suit-->	
 					<div class="span4 offset1">
 						<h2 class="greenHeader2">Volunteer</h2>
 						<p>Sign up and help make a difference.</p>
@@ -137,9 +137,9 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 			<div class="row">
 				<div class="span10 offset6">
 					<ul class="pills pillStyle">
-				  		<li><a href="#">About Us</a></li>
-				  		<li><a href="#">Donate</a></li>
-				  		<li><a href="#">Contact</a></li>
+				  		<li><a href="about.html">About Us</a></li>
+				  		<li><a href="donate.html">Donate</a></li>
+				  		<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
