Final changes made before submission of Project 1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ NAME: 	 	Danielle Collins
 CLASS: 		CSCI 344
 ASSIGNMENT: Project 1
 DUE DATE:   Friday, February 3, 2012
+PAGE:		Default page
 GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking 		
 			web page for a fake product, service, or application.
 
