--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@ NAME: 	 	Danielle Collins
 CLASS: 		CSCI 344
 ASSIGNMENT: Project 1
 DUE DATE:   Friday, February 3, 2012
+PAGE:		Contact page
 GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking 		
 			web page for a fake product, service, or application.
 -->
@@ -20,45 +21,34 @@ GOAL: 	    Using HTML, CSS, and Twitter Bootstrap, create a professional-looking
 	</head>
 <body class="backgroundContainer">
 	
-		<div class="container spacer"></div>
+	<div class="container spacer"></div> <!--Places a space between the containers-->
 		
-		<div class="container topContainer"><!--Holds all contents in the top section-->
-			<div class="row">
-				<div class="span5"><a href="index.html"><img src="img/200px-EarthRecycle.png" alt="Logo"></a></div> 
-					<!--Img from wikimedia commons-->	
-					<div class="span9">
-						<h1 class="greenHeader">CONTACT US</h1>
-						<p>123 Somestreet<br>
-						Somewhere, NC 12345</p>
-						<p>Phone: 888-123-4567<br>
-						   Fax: 123-456-7890</p>
-						<p>Email: wewanttohelp@somedomain.com</p>
-					</div>	
-			</div>
-		</div>	<!--end of top container-->
+	<div class="container topContainer"><!--Holds all contents in the top section-->
+		<div class="row"> <!--beginning of top row-->
+			<div class="span5"><a href="index.html"><img src="img/200px-EarthRecycle.png" alt="Logo"></a></div> <!--Beginning and end of first column. Img from wikimedia commons-->
+			<div class="span9"> <!--beginning of second column-->
+				<h1 class="greenHeader">CONTACT US</h1>
+				<p>123 Somestreet<br>
+				   Somewhere, NC 12345</p>
+				<p>Phone: 888-123-4567<br>
+				   Fax: 123-456-7890</p>
+				<p>Email: wewanttohelp@somedomain.com</p>
+			</div> <!--end of second column-->	
+		</div> <!--end of top row-->
+	</div>	<!--end of top container-->
 		
-		<div class="container spacer"></div>
+	<div class="container spacer"></div> <!--Places a space between the containers-->
 		
-		<div class="container bottomLinksContainer"><!--holds bottom links menu-->
-			<div class="row">
-				<div class="span10 offset6">
-					<ul class="pills pillStyle">
-				  		<li><a href="about.html">About Us</a></li>
-				  		<li><a href="donate.html">Donate</a></li>
-				  		<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-		</div><!--end of bottom links menu-->
+	<div class="container bottomLinksContainer"><!--holds bottom links menu-->
+		<div class="row"> <!--beginning of row-->
+			<div class="span10 offset6"> <!--beginning of first column-->
+				<ul class="pills pillStyle"> <!--navigation menu-->
+				  	<li><a href="about.html">About Us</a></li>
+				  	<li><a href="donate.html">Donate</a></li>
+				  	<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</div> <!--end of first column-->
+		</div> <!--end of row-->
+	</div> <!--end of bottom links menu-->
 </body>
 </html>
-
-<!-- 
-
-Reduce electronic waste.  Become a volunteer to pick up 
-waste from individuals and properly dispose of it for them.
-
-	Place a request to have your electronic waste picked up 
-	(img page http://commons.wikimedia.org/wiki/Category:WEEE)
-	
--->
